--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "index.js",
   "type": "module",
+  "engines" : {
+    "node" : ">=14.20.1"
+  },
   "scripts": {
-    "start": "nodemon index"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
