--- a/client/package.json
+++ b/client/package.json
@@ -9,23 +9,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-three/drei": "^9.65.3",
-    "@react-three/fiber": "^8.12.1",
-    "framer-motion": "^10.12.2",
-    "maath": "^0.5.3",
+    "@react-three/drei": "9.74.6",
+    "@react-three/fiber": "8.13.0",
+    "framer-motion": "^10.12.16",
+    "maath": "0.6.0",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
-    "three": "^0.151.3",
-    "valtio": "^1.10.4"
+    "three": "0.153.0",
+    "valtio": "1.10.5"
   },
   "devDependencies": {
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@vitejs/plugin-react": "^3.1.0",
+    "@types/react": "18.2.9",
+    "@types/react-dom": "18.2.4",
+    "@vitejs/plugin-react": "4.0.0",
     "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.22",
-    "tailwindcss": "^3.3.1",
-    "vite": "^4.2.0"
+    "postcss": "8.4.24",
+    "tailwindcss": "3.3.2",
+    "vite": "4.3.9"
   }
 }
